[package]
name = "pages-meta"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EgorHenek/pages-meta"
license = "MIT"
authors = ["Egor Glukhikh <eagluhih@gmail.com>"]
description = "This is an application http service that takes url as input and returns json with page meta tags by url"

[package.metadata.bininstall]
pkg-url = "{ repo }/releases/download/{version}/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
axum = { version = "0", features = ["tracing"] }
config = "0.14"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
html5ever = "0.27"
url = "2"
markup5ever_rcdom = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
